--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "axios": "^1.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hooks-global-state": "^2.1.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^2.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
